# gaud

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  check_output.txt  gaud.db  gaud.service  install.sh  llm-proxy.toml
gemini-google/antigravity-gate-rs/: Cargo.toml
gemini-google/antigravity-gate-rs/docs/: Design.md  Requirements.md  Tasks.md
gemini-google/antigravity-gate-rs/examples/: auth_flow.rs  basic_usage.rs  streaming.rs  thinking.rs  tool_use.rs
gemini-google/antigravity-gate-rs/src/: client.rs  constants.rs  error.rs  lib.rs
gemini-google/antigravity-gate-rs/src/auth/: flow.rs  mod.rs  oauth.rs  project.rs  token.rs
gemini-google/antigravity-gate-rs/src/convert/: content.rs  mod.rs  request.rs  response.rs  schema.rs  thinking.rs
gemini-google/antigravity-gate-rs/src/models/: content.rs  google.rs  mod.rs  request.rs  response.rs  tools.rs
gemini-google/antigravity-gate-rs/src/storage/: callback.rs  file.rs  keyring.rs  memory.rs  mod.rs
gemini-google/antigravity-gate-rs/src/transport/: http.rs  mod.rs  sse.rs
gemini-google/antigravity-gate-rs/tests/: integration.rs
kiro-gateway-rs/: Cargo.toml
kiro-gateway-rs/examples/: basic_usage.rs  raw_kiro_api.rs  streaming.rs  tool_use.rs
kiro-gateway-rs/src/: client.rs  config.rs  lib.rs
kiro-gateway-rs/src/api/: messages.rs  mod.rs  models.rs  raw.rs
kiro-gateway-rs/src/auth/: aws_sso_oidc.rs  constants.rs  credentials.rs  kiro_desktop.rs  manager.rs
kiro-gateway-rs/src/convert/: content.rs  mod.rs  model_resolver.rs  request.rs  response.rs  schema.rs
kiro-gateway-rs/src/models/: auth.rs  kiro.rs  mod.rs  response.rs  stream.rs
kiro-gateway-rs/src/storage/: file.rs  memory.rs  mod.rs
kiro-gateway-rs/src/transport/: headers.rs  http.rs  sse.rs
src/srrldb/: Cargo.toml  README.md
src/srrldb/core/: Cargo.toml  build.rs
src/srrldb/core/benches/: allocator.rs  executor.rs  functions.rs  statements.rs
src/srrldb/core/benches/common/: mod.rs
src/srrldb/core/src/: lib.rs  options.rs
src/srrldb/core/src/api/: err.rs  invocation.rs  mod.rs  path.rs  request.rs  response.rs
src/srrldb/core/src/buc/: controller.rs  manager.rs  mod.rs
src/srrldb/core/src/catalog/: access.rs  aggregation.rs  auth.rs  database.rs  mod.rs  module.rs  namespace.rs  providers.rs  record.rs  subscription.rs  table.rs  test.rs  view.rs
src/srrldb/core/src/cf/: gc.rs  mutations.rs  reader.rs  writer.rs
src/srrldb/core/src/cnf/: dynamic.rs  mod.rs
src/srrldb/core/src/ctx/: canceller.rs  context.rs  reason.rs
src/srrldb/core/src/dbs/: cache.rs  capabilities.rs  distinct.rs  executor.rs  file.rs  group.rs  iterator.rs  node.rs  options.rs  plan.rs  processor.rs  response.rs  result.rs  session.rs  statement.rs  store.rs  test.rs  variables.rs
src/srrldb/core/src/doc/: alter.rs  changefeeds.rs  check.rs  compute.rs  create.rs  delete.rs  document.rs  edges.rs  event.rs  field.rs  index.rs  insert.rs  lives.rs  mod.rs  pluck.rs  process.rs  purge.rs  relate.rs  select.rs  store.rs  table.rs  update.rs  upsert.rs
src/srrldb/core/src/err/: mod.rs
src/srrldb/core/src/exe/: spawn.rs  try_join_all_buffered.rs
src/srrldb/core/src/expr/: access.rs  access_type.rs  algorithm.rs  base.rs  block.rs  bytesize.rs  cache.rs  changefeed.rs  closure.rs  cond.rs  constant.rs  data.rs  decimal.rs  dir.rs  explain.rs  expression.rs  fetch.rs  field.rs  filter.rs  function.rs  group.rs  kind.rs  language.rs  limit.rs  literal.rs  lookup.rs  mock.rs  mod.rs  model.rs  module.rs  operation.rs  operator.rs  order.rs  output.rs  param.rs  parameterize.rs  part.rs  plan.rs  reference.rs  script.rs  (+8 more)
src/srrldb/core/src/fmt/: escape.rs  mod.rs  test.rs
src/srrldb/core/src/fnc/: args.rs  array.rs  bytes.rs  count.rs  crypto.rs  duration.rs  encoding.rs  file.rs  geo.rs  http.rs  math.rs  mod.rs  not.rs  object.rs  operate.rs  parse.rs  rand.rs  record.rs  schema.rs  search.rs  sequence.rs  session.rs  set.rs  sleep.rs  string.rs  time.rs  type.rs  value.rs  vector.rs
src/srrldb/core/src/gql/: error.rs  schema.rs  tables.rs
src/srrldb/core/src/iam/: access.rs  auth.rs  base.rs  check.rs  clear.rs  file.rs  issue.rs  mod.rs  reset.rs  signin.rs  signup.rs  token.rs  verify.rs
src/srrldb/core/src/idx/: index.rs  mod.rs  seqdocids.rs
src/srrldb/core/src/key/: category.rs  debug.rs  record.rs
src/srrldb/core/src/kvs/: api.rs  batch.rs  clock.rs  ds.rs  err.rs  export.rs  index.rs  into.rs  key.rs  mod.rs  scanner.rs  sequences.rs  slowlog.rs  tasklease.rs  threadpool.rs  timestamp.rs  tr.rs  tx.rs  util.rs
src/srrldb/core/src/mac/: mod.rs
src/srrldb/core/src/mem/: fake.rs  mod.rs  notrack.rs  registry.rs
src/srrldb/core/src/obs/: mod.rs
src/srrldb/core/src/rpc/: args.rs  error.rs  method.rs  mod.rs  protocol.rs  request.rs  response.rs
src/srrldb/core/src/sql/: access.rs  access_type.rs  algorithm.rs  ast.rs  base.rs  block.rs  cache.rs  changefeed.rs  closure.rs  cond.rs  constant.rs  data.rs  dir.rs  explain.rs  expression.rs  fetch.rs  field.rs  file.rs  filter.rs  function.rs  group.rs  idiom.rs  index.rs  kind.rs  language.rs  limit.rs  literal.rs  lookup.rs  mock.rs  mod.rs  model.rs  module.rs  operator.rs  order.rs  output.rs  param.rs  part.rs  permission.rs  reference.rs  scoring.rs  (+9 more)
src/srrldb/core/src/str/: bytes.rs  duration.rs
src/srrldb/core/src/syn/: mod.rs  test.rs
src/srrldb/core/src/sys/: mod.rs
src/srrldb/core/src/val/: array.rs  bytes.rs  closure.rs  datetime.rs  duration.rs  file.rs  geometry.rs  mod.rs  number.rs  object.rs  range.rs  record_id.rs  regex.rs  set.rs  table.rs  uuid.rs
src/srrldb/src/: database.rs  lib.rs
src/srrldb/types/: Cargo.toml
src/srrldb/types/derive/: Cargo.toml
src/srrldb/types/derive/src/: crate_path.rs  kind.rs  lib.rs  write_sql.rs
src/srrldb/types/src/: hashmap.rs  lib.rs  notification.rs  sql.rs  variables.rs
src/srrldb/types/src/kind/: geometry.rs  literal.rs  mod.rs
src/srrldb/types/src/traits/: surreal_value.rs
src/srrldb/types/src/utils/: escape.rs
src/srrldb/types/tests/: error_types.rs  kind.rs  serde_integration.rs
(+756 files in other folders)
