[package]
name = "gaud"
version = "0.1.0"
edition = "2024"
description = "Multi-user LLM proxy with OpenAI-compatible API, OAuth provider auth, and budget management"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace", "util", "set-header"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth / Crypto
argon2 = "0.5"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
hmac = "0.12"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Kiro gateway (Amazon Q / AWS CodeWhisperer)
kiro-gateway = { path = "kiro-gateway-rs" }

# Embedded SurrealDB for semantic cache (HNSW vector index)
surrealdb-core = { path = "/home/svnbjrn/projects/surrealdb-cache/surrealdb/core", default-features = false, features = ["kv-mem"] }
surrealdb-types = { path = "/home/svnbjrn/projects/surrealdb-cache/surrealdb/types" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "2"
anyhow = "1"

# System keyring
keyring = { version = "3", optional = true }

# URL encoding
urlencoding = "2"

# HTML templating
minijinja = { version = "2", features = ["builtins"] }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"

[features]
default = ["system-keyring"]
system-keyring = ["dep:keyring"]

[profile.release]
lto = true
strip = true
codegen-units = 1
