[package]
name = "antigravity-gate"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "OAuth-based Cloud Code API client for Claude and Gemini models"
license = "MIT"
repository = "https://github.com/svnbjrn/antigravity-gate-rs"
keywords = ["claude", "gemini", "oauth", "api", "cloudcode"]
categories = ["api-bindings", "authentication"]

[features]
default = []
keyring = ["dep:keyring"]
cli = ["dep:clap", "dep:colored", "dep:open", "dep:dialoguer"]
full = ["keyring", "cli"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto for PKCE
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Error handling
thiserror = "2"

# Async traits
async-trait = "0.1"

# URL handling
url = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Home directory
dirs = "6"

# Futures utilities
futures = "0.3"

# For streaming SSE
async-stream = "0.3"

# LRU cache for signatures
lru = "0.12"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# Optional: keyring for secret service
keyring = { version = "3", optional = true }

# CLI dependencies (optional)
clap = { version = "4", features = ["derive", "env"], optional = true }
colored = { version = "3", optional = true }
open = { version = "5", optional = true }
dialoguer = { version = "0.11", optional = true }
urlencoding = "2.1.3"
bytes = "1.11.1"
pin-project-lite = "0.2.16"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binary (CLI tool, requires cli feature)
# [[bin]]
# name = "ag"
# path = "src/bin/ag.rs"
# required-features = ["cli"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tool_use"
path = "examples/tool_use.rs"

[[example]]
name = "thinking"
path = "examples/thinking.rs"

[[example]]
name = "auth_flow"
path = "examples/auth_flow.rs"
