[package]
name = "srrldb"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Thin wrapper around SurrealDB for the gaud project"

[features]
default = []
allocator = ["surrealdb-core/allocator"]
kv-mem = ["surrealdb-core/kv-mem", "tokio/time"]
kv-rocksdb = ["surrealdb-core/kv-rocksdb", "tokio/time"]
allocation-tracking = ["surrealdb-core/allocation-tracking"]

[dependencies]
surrealdb-core = { workspace = true, default-features = false }
surrealdb-types.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "sync"] }
semver = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
