[package]
name = "srrldb"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Thin wrapper around SurrealDB for the gaud project"

[features]
default = []
allocator = ["srrldb-core/allocator"]
kv-mem = ["srrldb-core/kv-mem", "tokio/time"]
kv-rocksdb = ["srrldb-core/kv-rocksdb", "tokio/time"]
allocation-tracking = ["srrldb-core/allocation-tracking"]

[dependencies]
srrldb-core = { workspace = true, default-features = false }
srrldb-types.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "sync"] }
semver = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
